<resources>
    <string name="app_name">Mi_trip</string>
    <string name="title_activity_user">UserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="title_activity_upcoming_trips">UpcomingTripsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_maps_history">Maps History</string>
    <string name="Invalid_credentials">Invalid Credentials</string>
    <string name="logout">Logout</string>
    <string name="todo">ToDo</string>
    <string name="splash_image">splash_image</string>
    <string name="title_add_btn">AddButton</string>
    <string name="trip_name">Trip Name</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start_point">Start Point</string>
    <string name="distination">Distination</string>
    <string name="add_a_note">Add a note</string>
    <string name="add_notes">Add Notes</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="view_notes">View Notes</string>
    <string name="start_again">Start Again</string>
    <string name="delete_trip">Delete Trip</string>

    <string-array name="times_array">
        <item>Don\'t Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="trip_direction_array">
        <item>One way Trip</item>
        <item>Round Trip</item>
    </string-array>
</resources>