<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.user.SignUp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="cursive"
                android:text="@string/signup"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image_register" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_register"
                android:layout_width="128dp"
                android:layout_height="114dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/profile"
                app:civ_border_color="@color/purple_700"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email_register_edt"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="cursive"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:background="@android:drawable/editbox_background"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_register_edt" />

            <EditText
                android:id="@+id/name_register_edt"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="cursive"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:background="@android:drawable/editbox_background"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/phone_register_edt"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="cursive"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="20sp"
                android:background="@android:drawable/editbox_background"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_register_edt" />

            <EditText
                android:id="@+id/password_register_edt"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="cursive"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:background="@android:drawable/editbox_background"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_register_edt" />

            <EditText
                android:id="@+id/re_password_register_edt"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="cursive"
                android:hint="@string/re_type_password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:background="@android:drawable/editbox_background"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_register_edt" />


            <TextView
                android:id="@+id/login_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="56dp"
                android:fontFamily="cursive"
                android:text="@string/login"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/re_password_register_edt" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/re_password_register_edt" />

            <ProgressBar
                android:id="@+id/determinateBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="258dp"
                android:layout_height="29dp"
                android:layout_marginTop="64dp"
                android:backgroundTint="@color/white"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="143dp"
                android:layout_height="27dp"
                android:layout_marginStart="116dp"

                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/re_password_register_edt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
